增加 VENUE 內容，加入 Taipei 和 Place to see

--- a/index.html
+++ b/index.html
@@ -211,6 +211,36 @@
                             </header>
                         </div>
                     </div>
+                    <div class="row">
+                        <h2>Taipei, Taiwan</h2>
+                        <p>Taipei, officially known as Taipei City, is the capital of Taiwan. Situated at the northern tip of Taiwan, Taipei is located on the Tamsui River; it is about 25 km (16 mi) southwest of Keelung, a port city on the Pacific Ocean. It lies in the Taipei Basin, an ancient lakebed bounded by the two relatively narrow valleys of the Keelung and Xindian rivers, which join to form the Tamsui River along the city's western border. The city proper is home to an estimated 2,618,772 people. Taipei, New Taipei, and Keelung together form the Taipei–Keelung metropolitan area with a population of 6,900,273. They are administered under three municipal governing bodies. "Taipei" sometimes refers to the whole metropolitan area, while "Taipei City" refers to the city proper. Taipei City proper is surrounded on all sides by New Taipei.</p>
+                        <p><center><img src="images/tp_city.jpg" ></center></p>
+                        <h2>Places to See</h2>
+                        <h3>Taipei 101 (臺北101)</h3>
+                        <div class="span4 mobile3">
+                        </div>
+                        <div class="span8 mobile5">
+                            <p>Taipei 101 is a landmark skyscraper located in Xinyi District, Taipei, Taiwan. Taipei 101 comprises 101 floors above ground and 5 floors underground includes finance; headquarters of business and industrial; shopping mall and all kinds of entertainments.</p>
+                        </div>
+                        <h3>JiuFen (九份)</h3>
+                        <div class="span4 mobile3">
+                        </div>
+                        <div class="span8 mobile5">
+                            <p>Jiufen is a mountain area in the Ruifang District of New Taipei City. It was only an isolated village until 1893, when gold was discovered in the area. The resulting gold rush hastened the village's development into a town, and reached its peak during the Japanese rule. Many present features of Jiufen reflect the era under Japanese colonization, with many Japanese inns surviving to this day.</p>
+                        </div>
+                        <h3>WuLai (烏來)</h3>
+                        <div class="span4 mobile3">
+                        </div>
+                        <div class="span8 mobile5">
+                            <p>Wulai, which means “boiling water” in the Atayal tribe’s language. The hot spring surging from the valley of the Nanshih stream belongs to weak base sodium bicarbonate springs, the function of which is to keep you skin silky. The hot spring here therefore has another name: “Beauty bath”.</p>
+                        </div>
+                        <h3>Taroko (太魯閣)</h3>
+                        <div class="span4 mobile3">
+                        </div>
+                        <div class="span8 mobile5">
+                            <p>When Taroko National Park was established on November 28, l986, it was of special significance for the environmental protection movement in Taiwan: it showed that both the public and the government agencies had realized that against the background of the nation's four decades of extraordinary economic success, serious damage was being done to its natural resources.</p>
+                        </div>
+                    </div>
                 </div>
                 <div id="map_canvas"></div>
             </section>
