新增 VENUE 中各個景點介紹與照片，加入政大介紹與政大獸連結。修改地圖的寬度不要全版型。

--- a/index.html
+++ b/index.html
@@ -215,34 +215,81 @@
                         <h2>Taipei, Taiwan</h2>
                         <p>Taipei, officially known as Taipei City, is the capital of Taiwan. Situated at the northern tip of Taiwan, Taipei is located on the Tamsui River; it is about 25 km (16 mi) southwest of Keelung, a port city on the Pacific Ocean. It lies in the Taipei Basin, an ancient lakebed bounded by the two relatively narrow valleys of the Keelung and Xindian rivers, which join to form the Tamsui River along the city's western border. The city proper is home to an estimated 2,618,772 people. Taipei, New Taipei, and Keelung together form the Taipei–Keelung metropolitan area with a population of 6,900,273. They are administered under three municipal governing bodies. "Taipei" sometimes refers to the whole metropolitan area, while "Taipei City" refers to the city proper. Taipei City proper is surrounded on all sides by New Taipei.</p>
                         <p><center><img src="images/tp_city.jpg" ></center></p>
+                    </div>
+                    <div class="row">
                         <h2>Places to See</h2>
                         <h3>Taipei 101 (臺北101)</h3>
                         <div class="span4 mobile3">
+                            <img class="smallshow" src="images/tp101.jpg">
                         </div>
                         <div class="span8 mobile5">
                             <p>Taipei 101 is a landmark skyscraper located in Xinyi District, Taipei, Taiwan. Taipei 101 comprises 101 floors above ground and 5 floors underground includes finance; headquarters of business and industrial; shopping mall and all kinds of entertainments.</p>
+                            <p>More information: <a href="http://www.taipei-101.com.tw/en/index.aspx" target="_blank">Taipei 101</a> </p>
                         </div>
+                    </div>
+                    <div class="row">
+                        <h3>YangMingShan (陽明山)</h3>
+                        <div class="span4 mobile3">
+                            <img class="smallshow" src="images/yangmin.jpg">
+                        </div>
+                        <div class="span8 mobile5">
+                            <p>The Yangmingshan National Park is one of the eight national parks in Taiwan, located between Taipei City and New Taipei City. The districts that house parts of the park grounds include Taipei's Beitou and Shilin Districts; and New Taipei's Wanli, Jinshan and Sanzhi Districts.</p>
+                            <p>More information:</p>
+                            <ul>
+                                <li><a href="http://english.ymsnp.gov.tw/index.php?option=com_content&view=featured&gp=0&Itemid=104" target="_blank">Yangmingshan National Park</a></li>
+                                <li><a href="http://eng.taiwan.net.tw/m1.aspx?sNo=0002090&id=R139" target="_blank">Yangmingshan National Park - Tourism Bureau, R.O.C. (Taiwan)</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="row">
                         <h3>JiuFen (九份)</h3>
                         <div class="span4 mobile3">
+                            <img class="smallshow" src="images/jiufen.jpg">
                         </div>
                         <div class="span8 mobile5">
                             <p>Jiufen is a mountain area in the Ruifang District of New Taipei City. It was only an isolated village until 1893, when gold was discovered in the area. The resulting gold rush hastened the village's development into a town, and reached its peak during the Japanese rule. Many present features of Jiufen reflect the era under Japanese colonization, with many Japanese inns surviving to this day.</p>
+                            <p>More information: <a href="http://eng.taiwan.net.tw/m1.aspx?sNo=0017973&id=290&jid=71" target="_blank">Jiufen - Tourism Bureau, R.O.C. (Taiwan)</a> </p>
                         </div>
+                    </div>
+                    <div class="row">
                         <h3>WuLai (烏來)</h3>
                         <div class="span4 mobile3">
+                            <img class="smallshow" src="images/wulai.jpg">
                         </div>
                         <div class="span8 mobile5">
                             <p>Wulai, which means “boiling water” in the Atayal tribe’s language. The hot spring surging from the valley of the Nanshih stream belongs to weak base sodium bicarbonate springs, the function of which is to keep you skin silky. The hot spring here therefore has another name: “Beauty bath”.</p>
+                            <p>More information: <a href="http://eng.taiwan.net.tw/m1.aspx?sNo=0017973&id=166&jid=64" target="_blank">Wulai - Tourism Bureau, R.O.C. (Taiwan)</a> </p>
                         </div>
+                    </div>
+                    <div class="row">
                         <h3>Taroko (太魯閣)</h3>
                         <div class="span4 mobile3">
+                            <img class="smallshow" src="images/taroko.jpg">
                         </div>
                         <div class="span8 mobile5">
                             <p>When Taroko National Park was established on November 28, l986, it was of special significance for the environmental protection movement in Taiwan: it showed that both the public and the government agencies had realized that against the background of the nation's four decades of extraordinary economic success, serious damage was being done to its natural resources.</p>
+                            <p>More information:</p>
+                            <ul>
+                                <li><a href="http://eng.taiwan.net.tw/m1.aspx?sNo=0017973&id=R43" target="_blank">Taroko - Tourism Bureau, R.O.C. (Taiwan)</a></li>
+                                <li><a href="http://www.taroko.gov.tw/English/" target="_blank">Taroko National Park</a></li>
+                            </ul>
                         </div>
                     </div>
+                    <div class="row">
+                        <h3>National Chengchi University (NCCU)</h3>
+                        <div class="span6 mobile4">
+                            <p>National Chengchi University (NCCU) was founded in 1927. Over the past 8 decades through re-formation and development, we have been upholding our motto, “Harmony, Independence, Balance and Preeminence”, and have continued to refine our teaching methods and research in order to nurture talent for our country and society.</p>
+                            <p>More information: <a href="http://www.nccu.edu.tw/?locale=en" target="_blank">National Chengchi University</a></p>
+                            
+                        </div>
+                        <div class="span6 mobile4">
+                            <p>
+                                <iframe width="450" height="253" src="//www.youtube.com/embed/4GDrx1kc_zA" frameborder="0" allowfullscreen></iframe>
+                            </p>
+                        </div>
+                    </div>
+                    <div id="map_canvas"></div>
                 </div>
-                <div id="map_canvas"></div>
             </section>
             <section id="schedule" class="section_orange attach_arrow_white">
                 <div class="container">
@@ -373,6 +420,14 @@
                             </p>
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="span12 mobile8">
+                            <p>(Tentative) Proceedings will be published in the <a href="http://www.springer.com/series/558" target="_blank">Springer Lecture Notes in Computer Science (LNCS)</a> series.</p>
+                            <p class="list">
+                                <a href="http://www.springer.com/" target="_blank"><img src="images/sponsors/springer.jpg" alt="Springer" /></a>
+                            </p>
+                        </div>
+                    </div>
                 </div>
                 <div id="map_canvas"></div>
             </section>
@@ -417,7 +472,6 @@
 
             ga('create', 'UA-31269431-2', 'smartgraphics.org');
             ga('send', 'pageview');
-
         </script>
     </body>
 </html>
