新增 Call for paper 檔案及連結

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                                 <h2>test</h2>
                             </header>
                             <p>
-                                <a href="#" class="button normal middle" target="_blank">Submission: March 21, 2014</a>
+                                <a href="files/sg2014-CFP-flyer.pdf" class="button normal middle" target="_blank"><img src="images/pdf_downlaod_s.png"> Submission: March 21, 2014</a>
                             </p>
                         </div>
                     </div>
@@ -314,6 +314,13 @@
                             <header>
                                 <h2>Submission</h2>
                             </header>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="span12 mobile8">
+                            <h3 style="text-align:center">Call for Papers</h3>
+                            <p style="text-align:center"><a href="files/sg2014-CFP-flyer.pdf" target="_blank"><img src="images/pdf_downlaod.png"></a><br>
+                                Download as PDF</p>  
                         </div>
                     </div>
                     <div class="row">
