Springer 已確定出版，移除暫時的標註

--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                     </div>
                     <div class="row">
                         <div class="span12 mobile8">
-                            <p>(Tentative) Proceedings will be published in the <a href="http://www.springer.com/series/558" target="_blank">Springer Lecture Notes in Computer Science (LNCS)</a> series.</p>
+                            <p>Proceedings will be published in the <a href="http://www.springer.com/series/558" target="_blank">Springer Lecture Notes in Computer Science (LNCS)</a> series.</p>
                             <p class="list">
                                 <a href="http://www.springer.com/" target="_blank"><img src="images/sponsors/springer.jpg" alt="Springer" /></a>
                             </p>
