增加 Springer LNCS Format 與 EasyChair Submit link

--- a/index.html
+++ b/index.html
@@ -330,13 +330,13 @@
                             <hr class="light" />
                             <blockquote>
                                 <h3>Full research papers:</h3>
-                                <p>These will encompass comprehensive descriptions of original work within the scope of the symposium (limited to 12 pages in Springer LNCS format).</p>
+                                <p>These will encompass comprehensive descriptions of original work within the scope of the symposium (limited to 12 pages in <a href="http://www.springer.com/computer/lncs?SGWID=0-164-6-793341-0" target="_blank">Springer LNCS format <img src="images/link.gif"></a>).</p>
                                 <hr class="light" />
                                 <h3>Posters:</h3>
-                                <p>Tentative or preliminary results of research or design work with emphasis on the interdisciplinary evaluation of the ideas (limited to 4 pages in Springer LNCS format). Poster papers will be included in the proceedings.</p>
+                                <p>Tentative or preliminary results of research or design work with emphasis on the interdisciplinary evaluation of the ideas (limited to 4 pages in <a href="http://www.springer.com/computer/lncs?SGWID=0-164-6-793341-0" target="_blank">Springer LNCS format <img src="images/link.gif"></a>). Poster papers will be included in the proceedings.</p>
                                 <hr class="light" />
                                 <h3>System demonstrations:</h3>
-                                <p>Short descriptions of research or design work that the authors intend to show and discuss in a demo session at the symposium (limited to 2 pages in Springer LNCS format). System demonstration papers will be included in the proceedings.</p>
+                                <p>Short descriptions of research or design work that the authors intend to show and discuss in a demo session at the symposium (limited to 2 pages in <a href="http://www.springer.com/computer/lncs?SGWID=0-164-6-793341-0" target="_blank">Springer LNCS format <img src="images/link.gif"></a>). System demonstration papers will be included in the proceedings.</p>
                                 <hr class="light" />
                                 <h3>Arts track:</h3>
                                 <p>Computer animations, multimedia performances, interactive art and design, etc. Artists must submit a three page proposal outlining the concept and technique of their work, including a discussion of the relationship between smart technologies and their artistic and creative practice.</p>
@@ -379,6 +379,10 @@
                             </ul>
                         </div>
                         <div class="span12 mobile8">
+                            <p class="hint">Authors' Instructions</p>
+                            <p>As in previous years, proceedings will be published in the Springer Lecture Notes in Computer Science (LNCS) series. Therefore, submissions are expected in the <a href="http://www.springer.com/computer/lncs?SGWID=0-164-6-793341-0" target="_blank">Springer LNCS format <img src="images/link.gif"></a>. You will find instructions for the preparation of your papers at Springer’s Authors’ Instructions page.</p>
+                        </div>
+                        <div class="span12 mobile8">
                             <p class="hint">Important Dates</p>
                             <ul>
                                 <li>Submission: April 1 (<strike>March 21</strike>), 2014</li>
@@ -386,6 +390,10 @@
                                 <li>Camera: June 16, 2014</li>
                                 <li>Symposium: August 27-29, 2014</li>
                             </ul>
+                        </div>
+                        <div class="span12 mobile8">
+                            <p class="hint">Submission Site</p>
+                            <p>Smart Graphics 2014 submissions are handled via EasyChair. Please submit your paper to <a href="https://www.easychair.org/conferences/?conf=sg2014" target="_blank">https://www.easychair.org/conferences/?conf=sg2014 <img src="images/link.gif"></a></p>
                         </div>
                     </div>
                 </div>
