--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                                 <h2>test</h2>
                             </header>
                             <p>
-                                <a href="files/sg2014-CFP-flyer.pdf" class="button normal middle" target="_blank"><img src="images/pdf_downlaod_s.png"> Submission: April 1, 2014</a>
+                                <a href="files/sg2014-CFP-flyer.pdf" class="button normal middle" target="_blank"><img src="images/pdf_downlaod_s.png"/> Submission due: April 1, 2014</a>
                             </p>
                         </div>
                     </div>
@@ -385,7 +385,7 @@
                         <div class="span12 mobile8">
                             <p class="hint">Important Dates</p>
                             <ul>
-                                <li>Submission: April 1 (<strike>March 21</strike>), 2014</li>
+                                <li>Submission due: April 1 (<strike>March 21</strike>), 2014</li>
                                 <li>Notification: May 31, 2014</li>
                                 <li>Camera: June 16, 2014</li>
                                 <li>Symposium: August 27-29, 2014</li>
