--- a/index.html
+++ b/index.html
@@ -164,13 +164,13 @@
                                     <li>Christian Jacquemin (LIMSI-CNRS, France)</li>
                                     <li>Elisabeth Andre (University of Augsburg, Germany)</li>
                                     <li>Hiroshi Hosobe (Tokyo National Institute of Informatics, Japan)</li>
+                                    <li>Hung-Hsuan Huang (Ritsumeikan University, Japan)</li>
                                     <li>Lutz Dickmann (Bremen University, Germany)</li>
                                     <li>Mateu Sbert (University of Girona, Spain)</li>
                                     <li>Roberto Ranon (University of Udine, Italy)</li>
                                     <li>Roberto Therón(University of Salamanca, Spain)</li>
                                     <li>Shigeo Takahashi (University of Tokyo, Japan)</li>
                                     <li>Shigeru Owada (Sony CSL, Japan)</li>
-                                    <li>Steven Feiner (Columbia University, US)</li>
                                     <li>Tevfik Metin Sezgin (Koc University,Turkey)</li>
                                     <li>Thomas Rist (University of Applied Sciences, Germany)</li>
                                     <li>Tong-Yee Lee (National Cheng-Kung University, Taiwan)</li>
