Change contact email address to MOK.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                                 <h2>test</h2>
                             </header>
                             <p>
-                                <a href="files/sg2014-CFP-flyer.pdf" class="button normal middle" target="_blank"><img src="images/pdf_downlaod_s.png"/> Submission due: April 1, 2014</a>
+                                <a href="files/sg2014-CFP-flyer.pdf" class="button normal middle" target="_blank"><img src="images/pdf_downlaod_s.png"/> Submission due: <strike>April 1, 2014</strike> (extended: April 15, 2014)</a>
                             </p>
                         </div>
                     </div>
@@ -385,7 +385,7 @@
                         <div class="span12 mobile8">
                             <p class="hint">Important Dates</p>
                             <ul>
-                                <li>Submission due: April 1 (<strike>March 21</strike>), 2014</li>
+                                <li>Submission due: <strike>April 1, 2014</strike> (extended: April 15, 2014)</li>
                                 <li>Notification: May 31, 2014</li>
                                 <li>Camera: June 16, 2014</li>
                                 <li>Symposium: August 27-29, 2014</li>
@@ -452,7 +452,7 @@
                 <div class="row">
                     <div class="span12 mobile8">
                         <p class="social">
-                            <span class="icon-mail"> <a href="mailto:99753012@nccu.edu.tw" target="_blank">99753012@nccu.edu.tw</a></span><span class="split">/</span>
+                            <span class="icon-mail"> <a href="mailto:deepviator@gmail.com" target="_blank">deepviator@gmail.com</a></span><span class="split">/</span>
                             <a href="http://www.nccu.edu.tw/" target="_blank">NCCU</a><span class="split">/</span>
                             <a href="http://www.cs.nccu.edu.tw/" target="_blank">NCCU CS</a><span class="split">/</span>
                             <a href="http://imlab.cs.nccu.edu.tw/" target="_blank">IMLab</a>
