Change Submission due, Final extension

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                                 <h2>test</h2>
                             </header>
                             <p>
-                                <a href="files/sg2014-CFP-flyer.pdf" class="button normal middle" target="_blank"><img src="images/pdf_downlaod_s.png"/> Submission due: <strike>April 1, 2014</strike> (extended: April 15, 2014)</a>
+                                <a href="files/sg2014-CFP-flyer.pdf" class="button normal middle" target="_blank"><img src="images/pdf_downlaod_s.png"/> Submission due: April 29, 2014 (final extension)</a>
                             </p>
                         </div>
                     </div>
@@ -325,7 +325,7 @@
                     <div class="row">
                         <div class="span12 mobile8">
                             <p>Smart Graphics 2014 welcomes submissions from researchers and practitioners, as well as graphic artists and graphic designers interested in an interdisciplinary approach to the design of smart interactive visual, auditory, and haptic displays. </p>
-                            <p>We specially encourage young researchers to submit their ideas and results.</p>
+                            <p>We specially encourage young researchers to submit their ideas and results. Special prizes will be awarded to the best paper and the best students paper.</p>
                             <p>In 2014, we propose a specific emphasis on the integration of scientific research into the design of intelligent, interactive, and context-aware digital media applications. In particular, we encourage discussion of research that pertains to interactions within the everyday world, using smart graphics and responsive media to enrich and augment experiences, culture, leisure, and work.</p>
                             <hr class="light" />
                             <blockquote>
@@ -385,7 +385,7 @@
                         <div class="span12 mobile8">
                             <p class="hint">Important Dates</p>
                             <ul>
-                                <li>Submission due: <strike>April 1, 2014</strike> (extended: April 15, 2014)</li>
+                                <li>Submission due: April 29, 2014 (final extension)</li>
                                 <li>Notification: May 31, 2014</li>
                                 <li>Camera: June 16, 2014</li>
                                 <li>Symposium: August 27-29, 2014</li>
