Add registration information.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                                 <h2>test</h2>
                             </header>
                             <p>
-                                <a href="files/sg2014-CFP-flyer.pdf" class="button normal middle" target="_blank"><img src="images/pdf_downlaod_s.png"/> Submission due: April 29, 2014 (final extension)</a>
+                                <a href="files/sg2014-CFP-flyer.pdf" class="button normal middle" target="_blank"><img src="images/pdf_downlaod_s.png"/> Acceptance Notified.</a>
                             </p>
                         </div>
                     </div>
@@ -163,7 +163,7 @@
                                     <li>Bing-Yu Chen (National Taiwan University, Taiwan)</li>
                                     <li>Christian Jacquemin (LIMSI-CNRS, France)</li>
                                     <li>Elisabeth Andre (University of Augsburg, Germany)</li>
-                                    <li>Hiroshi Hosobe (Tokyo National Institute of Informatics, Japan)</li>
+                                    <li>Hiroshi Hosobe (Hosei University, Japan)</li>
                                     <li>Hung-Hsuan Huang (Ritsumeikan University, Japan)</li>
                                     <li>Lutz Dickmann (Bremen University, Germany)</li>
                                     <li>Mateu Sbert (University of Girona, Spain)</li>
@@ -333,6 +333,9 @@
                                 <h3>Full research papers:</h3>
                                 <p>These will encompass comprehensive descriptions of original work within the scope of the symposium (limited to 12 pages in <a href="http://www.springer.com/computer/lncs?SGWID=0-164-6-793341-0" target="_blank">Springer LNCS format <img src="images/link.gif"></a>).</p>
                                 <hr class="light" />
+                                <h3>Short research papers:</h3>
+                                <p>Some of the submitted research papers may be accepted as a short paper, which is limited to 8 pages in the  <a href="http://www.springer.com/computer/lncs?SGWID=0-164-6-793341-0" target="_blank">Springer LNCS format <img src="images/link.gif"></a>.</p>
+                                <hr class="light" />
                                 <h3>Posters:</h3>
                                 <p>Tentative or preliminary results of research or design work with emphasis on the interdisciplinary evaluation of the ideas (limited to 4 pages in <a href="http://www.springer.com/computer/lncs?SGWID=0-164-6-793341-0" target="_blank">Springer LNCS format <img src="images/link.gif"></a>). Poster papers will be included in the proceedings.</p>
                                 <hr class="light" />
@@ -387,8 +390,8 @@
                             <p class="hint">Important Dates</p>
                             <ul>
                                 <li>Submission due: April 29, 2014 (final extension)</li>
-                                <li>Notification: May 31, 2014</li>
-                                <li>Camera: June 16, 2014</li>
+                                <li>Notification: June 4, 2014 (<font style="color: #fe57a1;">new!</font>)</li>
+                                <li>Camera: June 18, 2014 (<font style="color: #fe57a1;">new!</font>)</li>
                                 <li>Symposium: August 27-29, 2014</li>
                             </ul>
                         </div>
@@ -410,7 +413,48 @@
                     </div>
                     <div class="row">
                         <div class="span12 mobile8">
-                            <p style="text-align: center;">Coming soon...</p>
+                            <h2>Registration</h2>
+                            <h3> Registration will be open from June 5, 2014, with an early bird deadline of July 15 for reduced rates.</h3>
+                            <p>Registration fee:</p>
+                            <table id="schedule-table">
+                                <thead>
+                                    <tr>
+                                        <th> </th>
+                                        <th>Full</th>
+                                        <th>Student</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <th>Early Bird (before <font style="color: red;">July 15</font>)</th>
+                                        <td>USD$350</td>
+                                        <td>USD$300</td>
+                                    </tr>
+                                    <tr>
+                                        <th>Regular</th>
+                                        <td>USD$400</td>
+                                        <td>USD$350</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                            <p>If there are any payment problem with registration,  feel free to contact Ms. Lai by Phone: +886-2-3366-4888 ext.503 or Email: <a href="mailto:june@cmlab.csie.ntu.edu.tw">june@cmlab.csie.ntu.edu.tw</a>.<br>繳費若有任何問題，請致電 (02)33664888 轉 503 賴小姐，或 Email至 <a href="mailto:june@cmlab.csie.ntu.edu.tw">june@cmlab.csie.ntu.edu.tw</a>。</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="span12 mobile8">
+                            <h2>Visa</h2>
+                            <p>Please refer to the links below to find visa information for attending Smart Graphics 2014 in Taiwan, and feel free to contact us if you need a formal invitation letter to apply for a visa. For foreigners of some nationalities, in order to enter Taiwan for a conference, it may be required to apply for a visa at an R.O.C (Taiwan) Embassy, Consulate, or Mission with an invitation letter issued by the sponsoring organization. Depending on your nationality, different rules may apply:</p>
+                            <ul>
+                                <li><a href="http://www.boca.gov.tw/ct.asp?xItem=1443&ctNode=536&mp=2" target="_blank">Visa-Exempt Entry</a></li>
+                                <li><a href="http://www.boca.gov.tw/ct.asp?xItem=1446&ctNode=536&mp=2" target="_blank">Landing Visas</a></li>
+                                <li><a href="http://www.boca.gov.tw/public/Attachment/13311126471.doc" target="_blank">Notice for British ＆ Canadian passport holders who entered Taiwan Visa-Free and are applying for an extension of stay</a></li>
+                            </ul>
+                            <p>中國籍參加者來台相關資訊 (For Mainland China participants, there could be three different types of applications):</p>
+                            <ol>
+                                <li>專業人士申請來臺，適用<a href="https://www.immigration.gov.tw/ct_cert.asp?xItem=1089292&ctNode=32595&mp=1" target="_blank">大陸地區人民來臺從事專業交流線上申請須知</a>。(NOTE: Since applying for this type of visa requires additional documents from us that need processing time, we recommend that you <a href="mailto:mtchi@cs.nccu.edu.tw">contact us</a> and begin the application as soon as possible.)</li>
+                                <li>陸客自由行（台湾个人游），適用<a href="https://www.immigration.gov.tw/ct_cert.asp?xItem=1101583&ctNode=32595&mp=1" target="_blank">大陸地區人民來臺從事個人旅遊觀光活動申請須知</a> ，請洽詢當地旅行社相關規定。</li>
+                                <li>在海外留學或工作證明者，適用<a href="https://www.immigration.gov.tw/ct.asp?xItem=1089301&ctNode=30066&mp=1" target="_blank">大陸地區人民自國外或香港澳門來臺從事觀光活動送件須知</a>。</li>
+                            </ol>
                         </div>
                     </div>
                 </div>
