Add TWD to registration fee table.

--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
                     <div class="row">
                         <div class="span12 mobile8">
                             <h2>Registration</h2>
-                            <h3> Registration will be open from June 5, 2014, with an early bird deadline of July 15 for reduced rates.</h3>
+                            <h3> Registration will be open from June 12, 2014, with an early bird deadline of July 15 for reduced rates.</h3>
                             <p>Registration fee:</p>
                             <table id="schedule-table">
                                 <thead>
@@ -427,13 +427,13 @@
                                 <tbody>
                                     <tr>
                                         <th>Early Bird (before <font style="color: red;">July 15</font>)</th>
-                                        <td>USD$350</td>
-                                        <td>USD$300</td>
+                                        <td>USD$350 (TWD$10,500)</td>
+                                        <td>USD$300 (TWD$9,000)</td>
                                     </tr>
                                     <tr>
                                         <th>Regular</th>
-                                        <td>USD$400</td>
-                                        <td>USD$350</td>
+                                        <td>USD$400 (TWD$12,000)</td>
+                                        <td>USD$350 (TWD$10,500)</td>
                                     </tr>
                                 </tbody>
                             </table>
