Modify registration system open info.

--- a/main.html
+++ b/main.html
@@ -414,7 +414,7 @@
                     <div class="row">
                         <div class="span12 mobile8">
                             <h2>Registration</h2>
-                            <h3>Registration will be open shortly.</h3>
+                            <h3> Registration will be open from June 12, 2014, with an early bird deadline of July 15 for reduced rates.</h3>
                             <p>Registration fee:</p>
                             <table id="schedule-table">
                                 <thead>
