Add first keynote speaker's biography.

--- a/index.html
+++ b/index.html
@@ -304,7 +304,13 @@
                     </div>
                     <div class="row">
                         <div class="span12 mobile8">
-                            <p>Not Ready Yet</p>
+                        <h2>Keynote</h2>    
+                        </div>
+                        <div class="span3 mobile2">
+                            <p style="text-align: center;"><img class="avatar" src="images/kss.jpg"></p><p style="text-align: center;"><strong>Karan Singh</strong></p>
+                        </div>
+                        <div class="span9 mobile6">
+                            <p>Karan Singh is a Professor of Computer Science at the University of Toronto. He holds a BTech. from IIT Madras and MS/PhD from the Ohio State University, in Computer Science. His research interests lie in art and perception driven interactive graphics spanning geometric design and fabrication, anatomic modeling, character animation, painterly rendering and mobile computing. He has been a technical lead on two commercial software projects that have won technical Oscars including Maya (the industry standard for 3D animation) and is a co-founder of Arcestra, a solution for architecture layout and visualization. He co-directs a reputed graphics and HCI lab, DGP <a href="http://www.dgp.toronto.edu/">www.dgp.toronto.edu <i class="fa fa-external-link"></i></a>. He was the R&D Director for the 2005 Oscar winning animated short Ryan and had an exhibition of electronic art titled Labyrinths, in 2010 <a href="http://www.karanshersingh.com/">www.karanshersingh.com <i class="fa fa-external-link"></i></a>.</p>
                         </div>
                     </div>
                 </div>
@@ -485,7 +491,7 @@
                                         </tr>
                                     </tbody>
                                 </table>
-                                </p>
+                            </p>
                             <p><i class="fa fa-home"></i> No.17, Ln. 112, Sec. 2, Xiuming Rd., Wenshan Dist., Taipei City 116, Taiwan (R.O.C.)<br />
                                 <i class="fa fa-phone"></i> 886-2-29368869<br />
                                 <i class="fa fa-envelope"></i> <a href="mailto:ihouse.nccu@gmail.com">ihouse.nccu@gmail.com</a>
