Add Accomodation Map on web.

--- a/index.html
+++ b/index.html
@@ -718,6 +718,9 @@
                             <h2>Accomodation</h2>
                         </div>
                         <div class="span12 mobile8">
+                            <iframe src="https://mapsengine.google.com/map/u/0/embed?mid=zG4zupm5Udp4.ksUjlbgrx50M" width="100%" height="480"></iframe>
+                        </div>
+                        <div class="span12 mobile8">
                             <h3><a href="http://oic.nccu.edu.tw/nccuihouse/scholar_en/intro.html" target="_blank">iHouse <i class="fa fa-external-link"></i></a></h3>
                             <p>
                                 <strong>iHouse offers a limited number of rooms with special rates for SG2014 attendees, please <a href="mailto:mtchi@cs.nccu.edu.tw">contact us</a> for booking.</strong>
